# bravimote

./: .prettierignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
public/: manifest.json
public/colors/dark/: blue-vibrant.json  blue.json  green-vibrant.json  green.json  lavender-vibrant.json  lavender.json  pink-vibrant.json  pink.json  teal-vibrant.json  teal.json
src/: App.tsx  Remote.tsx  Settings.tsx  Setup.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accent.rs  arp.rs  discovery.rs  lib.rs  main.rs  wol.rs
src/components/remote/: ErrorBoundary.tsx  MediaControls.tsx  NavigationPad.tsx  NumberPad.tsx  VolumeControls.tsx
src/components/ui/: button.tsx
src/lib/: api.ts  config.ts  ircc-codes.ts  theming.ts  types.ts  useRemoteController.ts
