cargo-features = ["profile-rustflags"]

[package]
name = "bravimote"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true
rustflags = ["-Zthreads=8"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bravimote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# currently 2.4.4 of tauri-plugin-http breaks
tauri-plugin-http = { version = "=2.2", features = ["unsafe-headers"] }
futures = "0.3.31"
tokio = "1.45.1"
reqwest = { version = "0.12.20", default-features = false, features = [
    "json",
    "rustls-tls",
] }
ssdp-client = "2.1.0"
url = "2.5.4"
tauri-plugin-os = "2"
